--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Output Management</title>
+        <title>development</title>
     </head>
 
     <body></body>
